# pktap

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  pktap_prd.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-rust-crypto-core/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-SECURITY.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-pkarr-dht-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-uniffi-bridge-android-build/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-android-keystore-module/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-SECURITY.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
android/: .gitignore  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/rust-bridge/: build.gradle.kts
pktap-core/: Cargo.toml
pktap-core/src/: cipher.rs  dht.rs  ecdh.rs  error.rs  ffi.rs  keys.rs  lib.rs  mnemonic.rs  record.rs  signing.rs
uniffi-bindgen/: Cargo.toml
(+34 files in other folders)
