[package]
name = "pktap-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
curve25519-dalek = { workspace = true }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hkdf = "0.12.4"
sha2 = "0.10.9"
zeroize = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand_core = { version = "0.6.4", features = ["getrandom"] }
uniffi = "0.31.0"
thiserror = "2"

[dev-dependencies]
hex-literal = "0.4"
